# pythonllearn

./: main.py  pyproject.toml
ejercicios/: ejercicio1.py  numero_romano.py
errores/: error.py
pruebas/: test1.py  test_numeros_romanos.py
